<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/logoMain"
        android:src="@drawable/logo"
        android:layout_height="60dp"></androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mainButtonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoMain"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="startList"
        android:text="LISTA COMPLETA DEI LUOGHI D'INTERESSE"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/mainButtonList">

        <TextView
            android:id="@+id/ricercaperMacroareeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="RICERCA PER MACROAREE"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"></TextView>

        <TableLayout
            android:id="@+id/mainTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_below="@+id/ricercaperMacroareeText"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/mainCardEdificiReligiosi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="startList"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:paddingTop="10dp"
                        android:paddingHorizontal="10dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mainImageEdificiReligiosi"
                            android:layout_width="160dp"
                            android:layout_height="130dp"
                            app:srcCompat="@drawable/edificireligiosi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btnReligiosi"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/mainCardEdificiStorici"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:onClick="startList"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingHorizontal="10dp"
                        android:paddingTop="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mainImageEdificiStorici"
                            android:layout_width="140dp"
                            android:layout_height="130dp"
                            app:srcCompat="@drawable/edificistorici" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/btnStorici"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/mainCardMostre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="7dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="startList"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingHorizontal="10dp"
                        android:paddingTop="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mainImageMostre"
                            android:layout_width="160dp"
                            android:layout_height="130dp"
                            app:srcCompat="@drawable/mostre" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btnMostre"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/mainCardMusei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="startList"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:paddingTop="10dp"
                        android:paddingHorizontal="10dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mainImageMusei"
                            android:layout_width="160dp"
                            android:layout_height="130dp"
                            app:srcCompat="@drawable/musei" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btnMusei"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/mainCardEventiCulturali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:layout_marginEnd="7dp"
                    android:focusable="true"
                    android:onClick="startList"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:paddingTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mainImageEventiCulturali"
                            android:layout_width="160dp"
                            android:layout_height="130dp"
                            app:srcCompat="@drawable/eventiculturali" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btnEventiCulturali"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/mainCardParchi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:layout_marginStart="7dp"
                    android:focusable="true"
                    android:onClick="startList"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:paddingTop="10dp"
                        android:paddingHorizontal="10dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mainImageParchi"
                            android:layout_width="160dp"
                            android:layout_height="130dp"
                            app:srcCompat="@drawable/parchi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btnParchi"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>